--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -9,6 +9,7 @@ import "@styles/global.css";
 // Setting expected props
 const { isNavbarSticky = true } = Astro.props;
 const { title = SITE.title, meta, structuredData, lang = "en" } = Astro.props;
+const clientID = import.meta.env.PAYPAL_CLIENT_ID;
 
 // Interface to type-check the properties
 interface Props {
@@ -30,6 +31,7 @@ We set the language of the page to English and add classes for scrollbar and scr
     <Meta meta={meta} structuredData={structuredData} />
     <!-- Define the title of the page -->
     <title>{title}</title>
+    {clientID && <script src={`https://www.paypal.com/sdk/js?client-id=${clientID}`}></script>}
     <script is:inline>
       // Script to handle dark mode. It will check if the theme is stored in localStorage or if dark theme is preferred by system settings
       if (
