--- a/src/components/sections/navbar&footer/Navbar.astro
+++ b/src/components/sections/navbar&footer/Navbar.astro
@@ -6,7 +6,7 @@ import MegaMenuLink from "@components/ui/links/MegaMenuLink.astro";
 import BrandLogo from "@components/BrandLogo.astro";
 import Authentication from "../misc/Authentication.astro";
 import AuthStatus from "@components/AuthStatus.astro"; // Importa el nuevo componente
-import UserProfile from "@components/sections/profile/UserProfile.astro"; // Importa el componente de perfil de usuario
+
 
 // Select the correct translation based on the page's lang prop:
 import enStrings from "@utils/navigation.ts";
@@ -17,7 +17,7 @@ const {isSticky = true} = Astro.props;
 ---
 
 <header
-  class="sticky inset-x-0 top-4 z-50 flex w-full flex-wrap text-sm md:flex-nowrap md:justify-start"
+  class="sticky inset-x-0 top-4 z-50 flex w-full flex-wrap text-sm md:flex-nowrap md:justify-start mb-8"
 >
   <nav
     class="relative mx-2 w-full rounded-[36px] border border-yellow-100/40 bg-yellow-50/60 px-4 py-3 backdrop-blur-md dark:border-neutral-700/40 dark:bg-neutral-800/80 dark:backdrop-blur-md md:flex md:items-center md:justify-between md:px-6 md:py-0 lg:px-8 xl:mx-auto"
@@ -94,7 +94,6 @@ const {isSticky = true} = Astro.props;
         {/* Sección de autenticación: usa el nuevo componente AuthStatus */}
         <div id="auth-section" class="flex items-center">
           <AuthStatus />
-          <UserProfile />
         </div>
 
         <span class="hidden md:inline-block ml-4">
